--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </ul>
             <h2>Work Experience</h2>
             <ul>
-                <li>Research Intern in User-Centered Design Lab, Polytechnique Montreal, 06/2021-</li>
+                <li>Undergraduate Researcher in Mobile and Ubiquitous Lab, Taiwan, 04/2020-</li>
                 <li>Teacher Assistant in Critical Thinking Course, 03/2021-06/2021</li>
             </ul>
             <h2>Extra-Curricular Experience</h2>
