--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <section id="about_me">
             <h1>About Me</h1>
-            <p>I am a CS student at National Chiao Tung University, and I am a member in Mobile and Ubiquitous Lab.</p>
+            <p>I am a CS student at National Chiao Tung University, and I am a member in Mobile and Ubiquitous Interaction Lab.</p>
             <p>My research interests lie in the fields of human-computer interaction and multimedia. Recently, I am doing research about interface of notification center in smartphone.</p>
             <p>In my free time, I also love to travel and take photos.</p>
         </section>
@@ -66,8 +66,9 @@
             </ul>
             <h2>Work Experience</h2>
             <ul>
-                <li>Undergraduate Researcher in Mobile and Ubiquitous Lab, Taiwan, 04/2020-</li>
-                <li>Teacher Assistant in Critical Thinking Course, 03/2021-06/2021</li>
+                <li>Research Intern in Human-Centered Design Lab, Canada, 06/2021-</li>
+                <li>Undergraduate Researcher in Mobile and Ubiquitous Interaction Lab, Taiwan, 04/2020-</li>
+                <li>Teacher Assistant in Critical Thinking Course, NCTU, 03/2021-06/2021</li>
             </ul>
             <h2>Extra-Curricular Experience</h2>
             <ul>
@@ -85,11 +86,11 @@
             </ul>
             <h2>Skills</h2>
             <ul>
-                <li>Programming Skills: C++/Python/JavaScript/JQuery/Android</li>
+                <li>Programming Skills: C++/Python/JavaScript/Android</li>
                 <li>Database Skills: MySQL/SQLite</li>
                 <li>Language Skills: Mandarin(Native)/English</li>
                 <li>Other Skills: UX/Communication/Team Management</li>
-                <li>Certificate: TOEIC 905</li>
+                <li>Certificate: TOEIC 905/GRE 324</li>
             </ul>
         </section>
     </div>
