--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h2>Work Experience</h2>
             <ul>
                 <li>Research Intern in Human-Centered Design Lab, Canada, 06/2021-</li>
-                <li>Undergraduate Researcher in Mobile and Ubiquitous Interaction Lab, Taiwan, 04/2020-</li>
+                <li>Undergraduate Researcher in Mobile and Ubiquitous Interaction Lab, Taiwan, 04/2020-06/2021</li>
                 <li>Teacher Assistant in Critical Thinking Course, NCTU, 03/2021-06/2021</li>
             </ul>
             <h2>Extra-Curricular Experience</h2>
