--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<p>My research interests lie in the fields of human-computer interaction (HCI) and social computing. Recently, I am doing research about a new notification management system.
 							Outside of work, I love to travel and take photos of places I visit.</p>
 						<ul class="actions">
-							<li><a href="files/YongHan_Lin_resume.pdf" class="button">Check my resume to learn more</a></li>
+							<li><a href="files/YongHan_Lin_resume.pdf" class="button col-3">Check my resume to learn more</a></li>
 						</ul>
 					</section>
 
@@ -367,9 +367,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
 									<div class="col-12"><span class="image fit"><img src="images/photography/01.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/photography/02.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/photography/03.jpg" alt="" /></span></div>
-									<div class="col-4"><span class="image fit"><img src="images/photography/04.jpg" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/photography/02.JPG" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/photography/03.JPG" alt="" /></span></div>
+									<div class="col-4"><span class="image fit"><img src="images/photography/04.JPG" alt="" /></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/photography/05.jpg" alt="" style="height: 170px;"/></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/photography/06.png" alt="" style="height: 170px;"/></span></div>
 									<div class="col-4"><span class="image fit"><img src="images/photography/07.png" alt="" style="height: 170px;"/></span></div>
