--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 						<li><a title="Github" href="https://github.com/scod0401" target="_blank" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
 						<li><a title="Email" href="mailto:alberta410476@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
+					<ul class="actions">
+						<li><a href="#two" class="button col-4">Selected Projects</a></li>
+						<li><a href="#three" class="button col-4">Fun Stuff</a></li>
+						<li><a href="#four" class="button col-4">Photography</a></li>
+					</ul>
 				</div>
 			</header>
 
@@ -37,9 +42,7 @@
 						</header>
 						<p>My research interests lie in the fields of human-computer interaction (HCI) and social computing. Recently, I am doing research about a new notification management system.
 							Outside of work, I love to travel and take photos of places I visit.</p>
-						<ul class="actions">
-							<li><a href="files/YongHan_Lin_resume.pdf" class="button col-3">Check my resume to learn more</a></li>
-						</ul>
+						
 					</section>
 
 				<!-- Two -->
@@ -65,6 +68,32 @@
 								<a href="https://drive.google.com/file/d/1XYxPBZgzR5Vly4gqr_NNPHSWTv46dJIH/view?usp=sharing" class="image fit thumb"><img src="images/projects/Stray_Rescue.png" alt="" /></a>
 								<h3>Stray Rescue</h3>
 								<p>A 100 seconds animation that encouraged people to rescue stray dogs.</p>
+							</article>
+						</div>
+					</section>
+
+					<section id="three">
+						<h2>Fun Stuff</h2>
+						<div class="row">
+							<article class="col-6 col-12-xsmall">
+								<a href="https://meichuhackathon.org/" class="image fit thumb"><img src="images/fun_stuff/hackathon.jpg" alt="" /></a>
+								<h3>Mei-Chu Hackathon, Hsinchu, Taiwan</h3>
+								<p>The largest student hackathon in Taiwan. I was the team leader in Public Relations in 2020 Mei-Chu Hackathon. We got more than 40K USD for sponsorship from company like Google and Amazon in that year!</p>
+							</article>
+							<article class="col-6 col-12-xsmall">
+								<a href="https://tedxnctu.nctu.edu.tw/index.php/about-2/" class="image fit thumb"><img src="images/fun_stuff/ted.jpg" alt="" /></a>
+								<h3>TED x NCTU</h3>
+								<p>We gather young people to discuss issues nowadays that can inspire the young to sketch the blue script of their future. I was an event planner in 2019.</p>
+							</article>
+							<article class="col-6 col-12-xsmall">
+								<a href="https://www.facebook.com/nctupc/" class="image fit thumb"><img src="images/fun_stuff/photography_club.jpg" alt="" /></a>
+								<h3>NCTU Photography Club</h3>
+								<p>Our first club leader was Stan Shih, the founder of Acer Inc., and I was a public relations in Sep. 2019 - June 2020.</p>
+							</article>
+							<article class="col-6 col-12-xsmall">
+								<a href="http://www.papacode.com.tw/" class="image fit thumb"><img src="images/fun_stuff/papacode.png" alt="" /></a>
+								<h3>Papacode Programming Promotion Team, Hsinchu, Taiwan</h3>
+								<p>We use board games to stimulate children's interest in programming! I was a team leader in NCTU in the year of 2019.</p>
 							</article>
 						</div>
 					</section>
@@ -362,7 +391,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</form>
 						</section>
 				-->
-						<section>
+						<section id="four">
 							<h2>Photography</h2>
 							<div class="box alt">
 								<div class="row gtr-50 gtr-uniform">
