--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall">
 								<a href="files/TAICHI_2021_Poster_file_59.png" class="image fit thumb"><img src="images/projects/NotiManager.png" alt="" /></a>
-								<h3>NotiManager</h3>
+								<h3>NotiManager (Undergoing Research)</h3>
 								<p>An intelligent notification management system that can replace smartphone user’s notification drawers and support users to automated or manually pin, sort and classify their own notifications.</p>
 							</article>
 							<article class="col-6 col-12-xsmall">
