--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<title>Yong-Han Lin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta property="og:title" content="Yong-Han Lin" />
+		<meta property="og:image" content="images/avatar.jpg" />
+		<meta property="og:description" content="Yong-Han Lin's personal website" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -42,7 +45,9 @@
 						</header>
 						<p>My research interests lie in the fields of human-computer interaction (HCI) and social computing. Recently, I am doing research about a new notification management system.
 							Outside of work, I love to travel and take photos of places I visit.</p>
-						
+						<ul class="actions">
+							<li><a href="#">Check my resume to learn more!</a></li>
+						</ul>
 					</section>
 
 				<!-- Two -->
