--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta property="og:title" content="Yong-Han Lin" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://scod0401.github.io/" />
 		<meta property="og:image" content="images/avatar.jpg" />
 		<meta property="og:description" content="Yong-Han Lin's personal website" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +21,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<div class="image avatar"><img src="images/avatar.jpg" alt="" /></div>
 					<div id="main_name">YONG-HAN  LIN</div>
 					<div id="self_intro">B.S Computer Science Student at <a href="https://www.nycu.edu.tw/" target="_blank">National Chiao Tung University</a><div>
 					<ul class="icons">
