--- a/index.html
+++ b/index.html
@@ -15,9 +15,22 @@
 		<meta property="og:image" content="images/avatar.jpg" />
 		<meta property="og:description" content="Yong-Han Lin's personal website" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-TW8QT68');</script>
+		<!-- End Google Tag Manager -->
 	</head>
 	<body class="is-preload">
-
+	
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TW8QT68"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
