--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 		<div id="main">
 
 			<!-- Introduction -->
-			<section id="one">
+			<section id="introduction">
 				<header class="major">
 					<h3>I create better systems that support human’s interaction with technology, and I want to design technology that mediates the interaction between individuals.</h3>
 				</header>
-				<p>My research interests lie in the fields of human-computer interaction (HCI) and social computing. 
+				<p>My research interests lie in the fields of <span style="font-weight: 600;color: grey;">human-computer interaction (HCI)</span> and <span style="font-weight: 600;color: grey;">social computing</span>. 
 					Recently, I am doing research that investigates the interaction between individuals with notifications on their smartphones.
 					Outside of work, I love to travel and take photos of places I visit.</p>
 				<!--<ul class="actions">
@@ -60,7 +60,7 @@
 				</ul>-->
 			</section>
 
-			<!-- Two -->
+			<!-- Selected Projects -->
 			<section id="selected_projects">
 				<h2>Selected Projects</h2>
 				<div class="row">
