--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="inner">
 				<div class="image avatar"><img src="images/avatar.jpg" alt="" /></div>
 				<div id="main_name">YONG-HAN  LIN</div>
-				<div id="self_intro">B.S Computer Science Student at <a href="https://www.nycu.edu.tw/" target="_blank">National Chiao Tung University</a><div>
+				<div id="self_intro">B.S Computer Science Student at <a href="https://www.nycu.edu.tw/" target="_blank">National Yang Ming Chiao Tung University</a><div>
 				<ul class="icons">
 					<li><a title="LinkedIn" href="https://www.linkedin.com/in/yong-han-lin-01a081189/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					<li><a title="Github" href="https://github.com/scod0401" target="_blank" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
