--- a/index.html
+++ b/index.html
@@ -31,21 +31,24 @@
 		<header id="header">
 			<div class="inner">
 				<div class="image avatar"><img src="images/avatar.jpg" alt="" /></div>
-				<div id="main_name">Yong-Han  Lin</div>
+				<div id="main_name">Yong-Han  Lin 林詠涵</div>
 				<div id="self_intro">
-					<div>HCI Researcher | CS Student at NYCU</div>
+					<div>HCI Researcher | B.S. CS @NYCU</div>
 					<!--<div>Undergraduate Researcher in MUI Lab at NYCU</div>
 					<div>EX-Research Intern in HCD Lab at Polytechnique Montréal</div>
 					<div>EX-Software Engineering Intern at Tech Startup</div>-->
 					<ul class="icons">
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
 						<li><a title="Github" href="https://github.com/scod0401" target="_blank" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
-						<li><a title="Email" href="mailto:alberta410476@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a title="CV" href="https://drive.google.com/file/d/1DmE69TW8NIskdLxjy89GGVXf20Kt9UfP/view?usp=sharing" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
+						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a title="Email" href="mailto:alberta.cs07@nycu.edu.tw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a title="CV" href="https://drive.google.com/file/d/1N2OrsjjaVLIfdZkQMEre37VMw4j-4es4/view?usp=sharing" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
 					<ul class="actions">
+						<li><a href="#publications" class="button col-4">Publications</a></li>
 						<li><a href="#projects" class="button col-4">Projects</a></li>
-						<li><a href="#extracurricular_activities" class="button col-4">Extracurricular Activities</a></li>
+						<li><a href="#extracurricular_activities" class="button col-4">More</a></li>
 					</ul>
 				</div>
 			</div>
@@ -57,18 +60,25 @@
 			<!-- Introduction -->
 			<section id="introduction">
 				<header class="major">
-					<p>I am a senior student at <a href="https://www.nycu.edu.tw/" target="_blank">National Yang Ming Chiao Tung University</a> (former: National Chiao Tung University), 
-						majoring in computer science and working with <a href="https://www.armuro.info/" target="_blank">Prof. Yung-Ju Chang</a> at the Mobile Ubiquitous Interaction Lab (MUI). 
-						I create better systems that support human’s interaction with technology, and I want to design technology that mediates the interaction between individuals.
-						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">human-computer interaction (HCI)</span> and <span style="font-weight: 600;color: grey;">social computing</span>. 
-						Recently, I am doing research to improve my past research tool - NotiManager and deeply investigate how people manage their notifications by using NotiManager. 
+					<p>Hi, I am currently a Human-Computer Interaction (HCI) researcher located in Taiwan,
+						working with <a href="https://www.armuro.info/" target="_blank">Prof. Yung-Ju Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab,
+						and <a href="http://www.haochuanwang.info/" target="_blank">Prof. Hao-Chuan Wang</a> at the Collaborative and Social Computing (CSC) Lab.
+						I received the degree of B.S. in Computer Science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/" target="_blank">National Yang Ming Chiao Tung University</a> (former: National Chiao Tung University) in Taiwan. 
+						I create better systems that support human’s interaction with technology, and design technology that mediates the interaction between individuals.
+						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Mobile HCI</span>, <span style="font-weight: 600;color: grey;">CSCW and Social Computing</span>. 
+						Recently, I am doing research about notification management on mobile devices and human-chatbot collaboration in the context of peer assessment.
 					</p>
 					<p>
-						In the past, I was a research intern in <a href="https://jhcheng.me/lab/" target="_blank">Human-Centered Design Lab</a> at Polytechnique Montréal, working with <a href="https://jhcheng.me/" target="_blank">Prof. Jinghui Cheng</a>.
-						Also, I was a software engineering intern at Xaduro Inc., a tech startup.	 
+						In the past, I was a research intern in <a href="https://jhcheng.me/lab/" target="_blank">Human-Centered Design Lab</a> at Polytechnique Montréal in Canada, working with <a href="https://jhcheng.me/" target="_blank">Prof. Jinghui Cheng</a>.
+						I investigated the use of visual artifacts in the issue discussions of open-source software (OSS).
+						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
 					<p>
-						Outside of research, I love to take photos of places I visit and read books. 
+						Outside of research, I love to take photos of places I visit, watch movies, and go hiking. 
+					</p>
+					<p>
+						<span style="font-weight: 600;color: #49BF9D;">Looking for a Ph.D. position starting in Fall 2024! <br>
+						Also, happy to collaborate and connect with any researcher in the world. 😀</span>
 					</p>					
 				</header>
 
@@ -78,55 +88,76 @@
 				</ul>-->
 			</section>
 
+			<!-- Publications -->
+			<section id="publications">
+				<h2>Publications</h2>
+				<h5>(* indicates equal contribution)</h5>
+				<div class="row">
+					<ul>
+						<li><span style="font-weight: 600;color: grey;">Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook </span> 
+							 [<a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank">ACM Digital Library</a>] 
+							[<a href="https://www.youtube.com/watch?v=iLEwW_DRu3U" target="_blank">Video</a>]<br>
+							Vishakha Agrawal*, <u>Yong-Han Lin</u>*, Jinghui Cheng (EASE '22)
+						</li>
+						<li><span style="font-weight: 600;color: grey;">A Notification Management System for: Sorting and Classifying Smartphone’s Notifications </span>
+							 [<a href="files/TAICHI_2021_Poster_file_59.pdf" target="_blank">link</a>]<br>
+							<u>Yong-Han Lin</u>*, Yin-Hsuan Liao*, Chia-Yu Huang*, Yu-Wei Yang, Hsin-Chien Tung, Chieh Hsu, Yung-Ju Chang (TAICHI '21)
+						</li>
+
+					</ul>
+					  
+					<!--<article class="col-12 col-12-xsmall">
+						<a href="https://dl.acm.org/doi/10.1145/3530019.3534082" target="_blank" class="image fit thumb"><img src="images/projects/Visual_Artifacts_in_OSS.png" alt="" /></a>
+						<h3>Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook</h3>
+						<p>Visual contents play an important role in open source software (OSS), we conducted an empirical study on the Jupyter Notebook project in this research to investigate why and how people use them. Click image to see the paper!</p>
+					</article>
+					<article class="col-12 col-12-xsmall">
+						<a href="files/TAICHI_2021_Poster_file_59.pdf" target="_blank" class="image fit thumb"><img src="images/projects/NotiManager.png" alt="" /></a>
+						<h3>A Notification Management System for: Sorting and Classifying Smartphone’s Notifications</h3>
+						<p>NotiManager is an intelligent notification management system that can replace smartphone user’s notification drawers and support users to automated or manually sort and classify their own notifications. Click image to see the paper!</p>
+					</article>-->
+				</div>
+			</section>
+
 			<!-- Projects -->
 			<section id="projects">
 				<h2>Projects</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
-						<a href="https://arxiv.org/pdf/2204.13262.pdf" class="image fit thumb"><img src="images/projects/Visual_Artifacts_in_OSS.png" alt="" /></a>
-						<h3>Understanding the Characteristics of Visual Contents in Open Source Issue Discussions: A Case Study of Jupyter Notebook</h3>
-						<p>Visual contents play an important role in open source software (OSS), we conducted an empirical study on the Jupyter Notebook project in this research to investigate why and how people use them. Click image to see the paper!</p>
-					</article>
-					<article class="col-6 col-12-xsmall">
-						<a href="files/TAICHI_2021_Poster_file_59.pdf" class="image fit thumb"><img src="images/projects/NotiManager.png" alt="" /></a>
-						<h3>A Notification Management System for: Sorting and Classifying Smartphone’s Notifications</h3>
-						<p>NotiManager is an intelligent notification management system that can replace smartphone user’s notification drawers and support users to automated or manually sort and classify their own notifications. Click image to see the paper!</p>
-					</article>
-					<article class="col-6 col-12-xsmall">
-						<a href="https://www.figma.com/proto/l7f3Y0dYCnRJ8XKyzbHUEt/%E6%B4%BB%E5%8B%95%E5%90%A7?page-id=1157%3A0&node-id=1173%3A691&viewport=241%2C48%2C0.03&scaling=min-zoom&starting-point-node-id=1168%3A173" class="image fit thumb"><img src="images/projects/NCTU+.png" alt="" /></a>
+						<a href="https://www.figma.com/proto/l7f3Y0dYCnRJ8XKyzbHUEt/%E6%B4%BB%E5%8B%95%E5%90%A7?page-id=1157%3A0&node-id=1173%3A691&viewport=241%2C48%2C0.03&scaling=min-zoom&starting-point-node-id=1168%3A173" target="_blank" class="image fit thumb"><img src="images/projects/NCTU+.png" alt="" /></a>
 						<h3>NCTU+ User Experience and Evaluate</h3>
-						<p><a href="https://plus.nctu.edu.tw/">NCTU+</a> is an intelligent campus system used by 10k+ students. In this project, I worked as an UX researcher to evaluate and re-design the event platform in NCTU+. Click image to see the demo!</p>
+						<p><a href="https://plus.nctu.edu.tw/">NCTU+</a> is an intelligent campus system used by 10k+ students. In this project, I worked as an UX researcher to evaluate and re-design the event platform in NCTU+.</p>
 					</article>
-					<!--<article class="col-6 col-12-xsmall">
+					<article class="col-6 col-12-xsmall">
 						<a href="https://github.com/scod0401/travel-in-taiwan" class="image fit thumb"><img src="images/projects/Travel_in_Taiwan.png" alt="" /></a>
 						<h3>Travel In Taiwan</h3>
-						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences. Click image to see the codes!</p>
-					</article>-->
+						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences.</p>
+					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://drive.google.com/file/d/1XYxPBZgzR5Vly4gqr_NNPHSWTv46dJIH/view?usp=sharing" class="image fit thumb"><img src="images/projects/Stray_Rescue.png" alt="" /></a>
+						<a href="https://drive.google.com/file/d/1XYxPBZgzR5Vly4gqr_NNPHSWTv46dJIH/view?usp=sharing" target="_blank" class="image fit thumb"><img src="images/projects/Stray_Rescue.png" alt="" /></a>
 						<h3>Stray Rescue</h3>
-						<p>Stray Rescue is a 100 seconds animation that encouraged people to rescue stray dogs. Click image to see the animation!</p>
+						<p>Stray Rescue is a 100 seconds animation that encouraged people to rescue stray dogs.</p>
 					</article>
 				</div>
 			</section>
 
 			<section id="extracurricular_activities">
-				<h2>Extracurricular Activities</h2>
+				<h2>More</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
-						<a href="https://meichuhackathon.org/" class="image fit thumb"><img src="images/fun_stuff/hackathon.jpg" alt="" /></a>
+						<a href="https://meichuhackathon.org/" target="_blank" class="image fit thumb"><img src="images/fun_stuff/hackathon.jpg" alt="" /></a>
 						<h3>Mei-Chu Hackathon</h3>
-						<p>The largest student hackathon in Taiwan. I was the team leader in Public Relations in 2020 Mei-Chu Hackathon. We got more than 40K USD for sponsorship from company like Google and Amazon in that year. Click image to see the official website!</p>
+						<p>The largest student hackathon in Taiwan. I was the team leader in Public Relations in 2020 Mei-Chu Hackathon. We got more than 40K USD for sponsorship from company like Google and Amazon in that year.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://tedxnctu.nctu.edu.tw/index.php/about-2/" class="image fit thumb"><img src="images/fun_stuff/ted.jpg" alt="" /></a>
+						<a href="https://tedxnctu.nctu.edu.tw/index.php/about-2/" target="_blank" class="image fit thumb"><img src="images/fun_stuff/ted.jpg" alt="" /></a>
 						<h3>TED x NCTU</h3>
-						<p>We gather young people to discuss issues nowadays that can inspire the young to sketch the blue script of their future. I was an event planner in 2019. Click image to see the official website!</p>
+						<p>We gather young people to discuss issues nowadays that can inspire the young to sketch the blue script of their future. I was an event planner in 2019.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://www.facebook.com/nctupc/" class="image fit thumb"><img src="images/fun_stuff/photography_club.jpg" alt="" /></a>
+						<a href="https://www.facebook.com/nctupc/" target="_blank" class="image fit thumb"><img src="images/fun_stuff/photography_club.jpg" alt="" /></a>
 						<h3>NCTU Photography Club</h3>
-						<p>Follow my interest, I joined NCTU photography club and became the public relations from Sep. 2019 to June 2020. Click image to see current activities in the club!</p>
+						<p>Follow my interest, I joined NCTU photography club and became the public relations from Sep. 2019 to June 2020.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
 						<img class="image fit thumb" src="images/fun_stuff/papacode.png" alt="" />
