--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 						<h3>NCTU+ User Experience and Evaluate</h3>
 						<p><a href="https://plus.nctu.edu.tw/">NCTU+</a> is an intelligent campus system used by 10k+ students. In this project, I worked as an UX researcher to evaluate and re-design the event platform in NCTU+.</p>
 					</article>
-					<article class="col-6 col-12-xsmall">
+					<!--<article class="col-6 col-12-xsmall">
 						<a href="https://github.com/scod0401/travel-in-taiwan" class="image fit thumb"><img src="images/projects/Travel_in_Taiwan.png" alt="" /></a>
 						<h3>Travel In Taiwan</h3>
 						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences.</p>
-					</article>
+					</article>-->
 					<article class="col-6 col-12-xsmall">
 						<a href="https://drive.google.com/file/d/1XYxPBZgzR5Vly4gqr_NNPHSWTv46dJIH/view?usp=sharing" target="_blank" class="image fit thumb"><img src="images/projects/Stray_Rescue.png" alt="" /></a>
 						<h3>Stray Rescue</h3>
