--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 					<div>EX-Software Engineering Intern at Tech Startup</div>-->
 					<ul class="icons">
 						<li><a title="Google Scholar" href="https://scholar.google.com.tw/citations?user=zrsqlLUAAAAJ&hl=zh-TW&authuser=2" target="_blank" class="icon brands"><i class="ai ai-google-scholar ai-lg"></i></a></li>
-						<li><a title="Github" href="https://github.com/scod0401" target="_blank" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
+						<li><a title="Github" href="https://github.com/scod0401" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a title="Twitter" href="https://twitter.com/yoonghaan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a title="Linkedin" href="https://www.linkedin.com/in/yonghan-lin" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 						<li><a title="Email" href="mailto:alberta.cs07@nycu.edu.tw" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<li><a title="CV" href="https://drive.google.com/file/d/1N2OrsjjaVLIfdZkQMEre37VMw4j-4es4/view?usp=sharing" target="_blank" class="icon brands"><i class="ai ai-cv ai-lg"></i></a></li>
 					</ul>
