--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 					<p>Hi, I am currently a Human-Computer Interaction (HCI) researcher located in Taiwan,
 						working with <a href="https://www.armuro.info/" target="_blank">Prof. Yung-Ju Chang</a> at the Mobile Ubiquitous Interaction (MUI) Lab,
 						and <a href="http://www.haochuanwang.info/" target="_blank">Prof. Hao-Chuan Wang</a> at the Collaborative and Social Computing (CSC) Lab.
-						I received the degree of B.S. in Computer Science in the summer of 2022 from the <a href="https://www.nycu.edu.tw/" target="_blank">National Yang Ming Chiao Tung University</a> (former: National Chiao Tung University) in Taiwan. 
+						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University) in Taiwan. 
 						I create better systems that support human’s interaction with technology, and design technology that mediates the interaction between individuals.
 						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Mobile HCI</span>, <span style="font-weight: 600;color: grey;">CSCW and Social Computing</span>. 
 						Recently, I am doing research about notification management on mobile devices and human-chatbot collaboration in the context of peer assessment.
 					</p>
 					<p>
-						In the past, I was a research intern in <a href="https://jhcheng.me/lab/" target="_blank">Human-Centered Design Lab</a> at Polytechnique Montréal in Canada, working with <a href="https://jhcheng.me/" target="_blank">Prof. Jinghui Cheng</a>.
+						In the past, I was a research intern in Human-Centered Design Lab at Polytechnique Montréal in Canada, working with <a href="https://jhcheng.me/" target="_blank">Prof. Jinghui Cheng</a>.
 						I investigated the use of visual artifacts in the issue discussions of open-source software (OSS).
 						Also, I was a software engineering intern at Xaduro Inc., a travel tech startup in Taiwan.	 
 					</p>
