--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Yong-Han Lin | Personal Website</title>
+		<title>Yong-Han Lin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta property="og:title" content="Yong-Han Lin" />
@@ -65,8 +65,8 @@
 						and <a href="http://www.haochuanwang.info/" target="_blank">Prof. Hao-Chuan Wang</a> at the Collaborative and Social Computing (CSC) Lab.
 						I received the degree of B.S. in Computer Science in the summer of 2022 from the National Yang Ming Chiao Tung University (former: National Chiao Tung University) in Taiwan. 
 						I create better systems that support human’s interaction with technology, and design technology that mediates the interaction between individuals.
-						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Mobile HCI</span>, <span style="font-weight: 600;color: grey;">CSCW and Social Computing</span>. 
-						Recently, I am doing research about notification management on mobile devices and human-chatbot collaboration in the context of peer assessment.
+						My research interests lie in the fields of <span style="font-weight: 600;color: grey;">Ubiquitous Computing</span>, <span style="font-weight: 600;color: grey;">CSCW and Social Computing</span>. 
+						Recently, I am doing research about human-AI collaboration for notification management on mobile devices and human-chatbot collaboration in the context of peer assessment.
 					</p>
 					<p>
 						In the past, I was a research intern in Human-Centered Design Lab at Polytechnique Montréal in Canada, working with <a href="https://jhcheng.me/" target="_blank">Prof. Jinghui Cheng</a>.
@@ -124,20 +124,30 @@
 				<h2>Projects</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
+						<a href="https://traiwan.com/" class="image fit thumb"><img src="images/projects/traiwan.jpg" alt="" /></a>
+						<h3>Traiwan</h3>
+						<p>Traiwan is a website for searching and booking hotels in taiwan. It is created by me with the development team of Xaduro Inc. while in my software engineering internship.</p>
+					</article>
+					<article class="col-6 col-12-xsmall">
 						<a href="https://www.figma.com/proto/l7f3Y0dYCnRJ8XKyzbHUEt/%E6%B4%BB%E5%8B%95%E5%90%A7?page-id=1157%3A0&node-id=1173%3A691&viewport=241%2C48%2C0.03&scaling=min-zoom&starting-point-node-id=1168%3A173" target="_blank" class="image fit thumb"><img src="images/projects/NCTU+.png" alt="" /></a>
 						<h3>NCTU+ User Experience and Evaluate</h3>
 						<p><a href="https://plus.nctu.edu.tw/">NCTU+</a> is an intelligent campus system used by 10k+ students. In this project, I worked as an UX researcher to evaluate and re-design the event platform in NCTU+.</p>
 					</article>
-					<!--<article class="col-6 col-12-xsmall">
+					<article class="col-6 col-12-xsmall">
+						<a href="https://drive.google.com/file/d/1zoUeNlg9u3wc0eYaPRTDwaX34Mhe9151/view?usp=sharing" class="image fit thumb"><img src="images/projects/Good Finance.jpg" alt="" /></a>
+						<h3>Good Finance Research</h3>
+						<p>Good Finance is a finance company that worked with us, we helped them understand how user read stock price and provided design implications to match with users' need by conducting user research, survey and competitor analysis.</p>
+					</article>
+					<article class="col-6 col-12-xsmall">
 						<a href="https://github.com/scod0401/travel-in-taiwan" class="image fit thumb"><img src="images/projects/Travel_in_Taiwan.png" alt="" /></a>
 						<h3>Travel In Taiwan</h3>
-						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences.</p>
-					</article>-->
-					<article class="col-6 col-12-xsmall">
+						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences. I designed and build the frontend and backend of this website.</p>
+					</article>
+					<!--<article class="col-6 col-12-xsmall">
 						<a href="https://drive.google.com/file/d/1XYxPBZgzR5Vly4gqr_NNPHSWTv46dJIH/view?usp=sharing" target="_blank" class="image fit thumb"><img src="images/projects/Stray_Rescue.png" alt="" /></a>
 						<h3>Stray Rescue</h3>
 						<p>Stray Rescue is a 100 seconds animation that encouraged people to rescue stray dogs.</p>
-					</article>
+					</article>-->
 				</div>
 			</section>
 
