--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<h2>Projects</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
-						<a href="https://traiwan.com/" class="image fit thumb"><img src="images/projects/traiwan.jpg" alt="" /></a>
+						<a href="https://traiwan.com/" class="image fit thumb" target="_blank"><img src="images/projects/traiwan.jpg" alt="" /></a>
 						<h3>Traiwan</h3>
 						<p>Traiwan is a website for searching and booking hotels in taiwan. It is created by me with the development team of Xaduro Inc. while in my software engineering internship.</p>
 					</article>
@@ -134,12 +134,12 @@
 						<p><a href="https://plus.nctu.edu.tw/">NCTU+</a> is an intelligent campus system used by 10k+ students. In this project, I worked as an UX researcher to evaluate and re-design the event platform in NCTU+.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://drive.google.com/file/d/1zoUeNlg9u3wc0eYaPRTDwaX34Mhe9151/view?usp=sharing" class="image fit thumb"><img src="images/projects/Good Finance.jpg" alt="" /></a>
+						<a href="https://drive.google.com/file/d/1zoUeNlg9u3wc0eYaPRTDwaX34Mhe9151/view?usp=sharing" class="image fit thumb" target="_blank"><img src="images/projects/Good Finance.jpg" alt="" /></a>
 						<h3>Good Finance Research</h3>
 						<p>Good Finance is a finance company that worked with us, we helped them understand how user read stock price and provided design implications to match with users' need by conducting user research, survey and competitor analysis.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://github.com/scod0401/travel-in-taiwan" class="image fit thumb"><img src="images/projects/Travel_in_Taiwan.png" alt="" /></a>
+						<a href="https://github.com/scod0401/travel-in-taiwan" class="image fit thumb" target="_blank"><img src="images/projects/Travel_in_Taiwan.png" alt="" /></a>
 						<h3>Travel In Taiwan</h3>
 						<p>Travel In Taiwan is a travel website that helps people find places to travel in Taiwan by selecting their preferences. I designed and build the frontend and backend of this website.</p>
 					</article>
@@ -155,17 +155,17 @@
 				<h2>More</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
-						<a href="https://meichuhackathon.org/" target="_blank" class="image fit thumb"><img src="images/fun_stuff/hackathon.jpg" alt="" /></a>
+						<img src="images/fun_stuff/hackathon.jpg" alt="" /></a>
 						<h3>Mei-Chu Hackathon</h3>
 						<p>The largest student hackathon in Taiwan. I was the team leader in Public Relations in 2020 Mei-Chu Hackathon. We got more than 40K USD for sponsorship from company like Google and Amazon in that year.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://tedxnctu.nctu.edu.tw/index.php/about-2/" target="_blank" class="image fit thumb"><img src="images/fun_stuff/ted.jpg" alt="" /></a>
+						<img src="images/fun_stuff/ted.jpg" alt="" /></a>
 						<h3>TED x NCTU</h3>
 						<p>We gather young people to discuss issues nowadays that can inspire the young to sketch the blue script of their future. I was an event planner in 2019.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<a href="https://www.facebook.com/nctupc/" target="_blank" class="image fit thumb"><img src="images/fun_stuff/photography_club.jpg" alt="" /></a>
+						<img src="images/fun_stuff/photography_club.jpg" alt="" /></a>
 						<h3>NCTU Photography Club</h3>
 						<p>Follow my interest, I joined NCTU photography club and became the public relations from Sep. 2019 to June 2020.</p>
 					</article>
