--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
 				<h2>More</h2>
 				<div class="row">
 					<article class="col-6 col-12-xsmall">
-						<img src="images/fun_stuff/hackathon.jpg" alt="" /></a>
+						<img class="image fit thumb" src="images/fun_stuff/hackathon.jpg" alt="" /></a>
 						<h3>Mei-Chu Hackathon</h3>
 						<p>The largest student hackathon in Taiwan. I was the team leader in Public Relations in 2020 Mei-Chu Hackathon. We got more than 40K USD for sponsorship from company like Google and Amazon in that year.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<img src="images/fun_stuff/ted.jpg" alt="" /></a>
+						<img class="image fit thumb" src="images/fun_stuff/ted.jpg" alt="" /></a>
 						<h3>TED x NCTU</h3>
 						<p>We gather young people to discuss issues nowadays that can inspire the young to sketch the blue script of their future. I was an event planner in 2019.</p>
 					</article>
 					<article class="col-6 col-12-xsmall">
-						<img src="images/fun_stuff/photography_club.jpg" alt="" /></a>
+						<img class="image fit thumb" src="images/fun_stuff/photography_club.jpg" alt="" /></a>
 						<h3>NCTU Photography Club</h3>
 						<p>Follow my interest, I joined NCTU photography club and became the public relations from Sep. 2019 to June 2020.</p>
 					</article>
